--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "main": "./server/server.js",
+  "proxy": "http://localhost:3005"
 }
