--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "cloudinary-react": "^1.0.4",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
+    "dropzone": "^5.2.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "massive": "^4.5.0",
@@ -14,6 +16,7 @@
     "passport-auth0": "^0.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-dropzone": "^4.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
