--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "massive": "^4.5.0",
+    "material-ui": "^0.19.4",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "react": "^16.1.1",
