work on footer and new packages in json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-social-icons": "^2.7.0",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.4.2"
   },
