--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dropzone": "^5.2.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "massive": "^4.5.0",
     "material-ui": "^0.19.4",
     "passport": "^0.4.0",
@@ -23,7 +24,9 @@
     "react-scripts": "1.0.17",
     "react-social-icons": "^2.7.0",
     "redux": "^3.7.2",
-    "redux-promise-middleware": "^4.4.2"
+    "redux-promise-middleware": "^4.4.2",
+    "request": "^2.83.0",
+    "x-ray": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
